# adventure-sphinx

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  libtool
adventure-festvox/cep/: Adventure0000.cep  Adventure0001.cep  Adventure0002.cep  Adventure0003.cep  Adventure0004.cep  Adventure0005.cep  Adventure0006.cep  Adventure0007.cep  Adventure0008.cep  Adventure0009.cep  Adventure0010.cep  Adventure0011.cep  Adventure0012.cep  Adventure0013.cep  Adventure0014.cep  Adventure0015.cep  Adventure0016.cep  Adventure0017.cep  Adventure0018.cep  Adventure0019.cep  Adventure0020.cep  Adventure0021.cep  Adventure0022.cep  Adventure0023.cep  Adventure0024.cep  Adventure0025.cep  Adventure0026.cep  Adventure0027.cep  Adventure0028.cep  Adventure0029.cep  Adventure0030.cep  Adventure0031.cep  Adventure0032.cep  Adventure0033.cep  Adventure0034.cep  Adventure0035.cep  Adventure0036.cep  Adventure0037.cep  Adventure0038.cep  Adventure0039.cep  (+722 more)
adventure-festvox/etc/: text.txt  txt.done.data  voice.defs
adventure-festvox/festival/clunits/: SLP_adventure_jas.catalogue
adventure-festvox/festival/feats/: aa_arched.feats  aa_are.feats  aa_arent.feats  aa_awkward.feats  aa_barred.feats  aa_bars.feats  aa_bedrock.feats  aa_beyond.feats  aa_bizarre.feats  aa_block.feats  aa_blocked.feats  aa_blocks.feats  aa_body.feats  aa_bothered.feats  aa_bottle.feats  aa_bottles.feats  aa_bottom.feats  aa_bottomless.feats  aa_box.feats  aa_calm.feats  aa_cannot.feats  aa_carpet.feats  aa_carved.feats  aa_causes.feats  aa_causing.feats  aa_caution.feats  aa_chaos.feats  aa_charlatan.feats  aa_chars.feats  aa_cobble.feats  aa_cobbles.feats  aa_colossal.feats  aa_column.feats  aa_com.feats  aa_complex.feats  aa_concepts.feats  aa_conquering.feats  aa_cost.feats  aa_costs.feats  aa_coughing.feats  (+7787 more)
adventure-festvox/festival/trees/: SLP_adventure_jas.tree  aa_arched.tree  aa_are.tree  aa_awkward.tree  aa_bars.tree  aa_beyond.tree  aa_blocked.tree  aa_blocks.tree  aa_body.tree  aa_bottle.tree  aa_bottom.tree  aa_calm.tree  aa_cannot.tree  aa_carpet.tree  aa_cobbles.tree  aa_colossal.tree  aa_complex.tree  aa_concepts.tree  aa_cost.tree  aa_dark.tree  aa_darkness.tree  aa_discarded.tree  aa_dot.tree  aa_drop.tree  aa_far.tree  aa_follow.tree  aa_following.tree  aa_har.tree  aa_holiday.tree  aa_large.tree  aa_lava.tree  aa_lock.tree  aa_locked.tree  aa_marks.tree  aa_not.tree  aa_objects.tree  aa_obviously.tree  aa_on.tree  aa_possible.tree  aa_pottery.tree  (+3640 more)
adventure-festvox/festival/utts/: Adventure0000.utt  Adventure0001.utt  Adventure0002.utt  Adventure0003.utt  Adventure0004.utt  Adventure0005.utt  Adventure0006.utt  Adventure0007.utt  Adventure0008.utt  Adventure0009.utt  Adventure0010.utt  Adventure0011.utt  Adventure0012.utt  Adventure0013.utt  Adventure0014.utt  (+747 more)
adventure-festvox/festvox/: SLP_adventure_jas_ldom.scm  build_ldom.scm
adventure-festvox/lab/: Adventure0000.lab  Adventure0001.lab  Adventure0002.lab  Adventure0003.lab  Adventure0004.lab  Adventure0005.lab  Adventure0006.lab  Adventure0007.lab  Adventure0008.lab  Adventure0009.lab  Adventure0010.lab  Adventure0011.lab  Adventure0012.lab  Adventure0013.lab  Adventure0014.lab  Adventure0015.lab  Adventure0016.lab  Adventure0017.lab  Adventure0018.lab  Adventure0019.lab  Adventure0020.lab  Adventure0021.lab  Adventure0022.lab  Adventure0023.lab  Adventure0024.lab  Adventure0025.lab  Adventure0026.lab  Adventure0027.lab  Adventure0028.lab  Adventure0029.lab  Adventure0030.lab  Adventure0031.lab  Adventure0032.lab  Adventure0033.lab  Adventure0034.lab  Adventure0035.lab  Adventure0036.lab  Adventure0037.lab  Adventure0038.lab  Adventure0039.lab  (+722 more)
adventure-festvox/mcep/: Adventure0000.mcep  Adventure0001.mcep  Adventure0002.mcep  Adventure0003.mcep  Adventure0004.mcep  Adventure0005.mcep  Adventure0006.mcep  Adventure0007.mcep  Adventure0008.mcep  Adventure0009.mcep  Adventure0010.mcep  Adventure0011.mcep  Adventure0012.mcep  Adventure0013.mcep  Adventure0014.mcep  Adventure0015.mcep  Adventure0016.mcep  Adventure0017.mcep  Adventure0018.mcep  Adventure0019.mcep  Adventure0020.mcep  Adventure0021.mcep  Adventure0022.mcep  Adventure0023.mcep  Adventure0024.mcep  Adventure0025.mcep  Adventure0026.mcep  Adventure0027.mcep  Adventure0028.mcep  Adventure0029.mcep  Adventure0030.mcep  Adventure0031.mcep  Adventure0032.mcep  Adventure0033.mcep  Adventure0034.mcep  Adventure0035.mcep  Adventure0036.mcep  Adventure0037.mcep  Adventure0038.mcep  Adventure0039.mcep  (+722 more)
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.am.bak  Makefile.in  asr_input.cxx  asr_input.h  crc.cxx  done.cxx  extern.h  festival_driver.cxx  festival_driver.h  festvoxfiles.mk  glorkz  gram.jsgf  hdr.h  init.cxx  io.cxx  main.cxx  parser.bnf  parser.c  save.cxx  setup.c  subr.cxx  vocab.cxx  wizard.cxx  yesno.jsgf
